test/libyul/yulSyntaxTests/eof/dataoffset_shadowing.yul
{
    function dataoffset(a) -> b {}
}
// ====
// bytecodeFormat: >=EOFv1
// ----
// DeclarationError 5017: (6-36): The identifier "dataoffset" is reserved and can not be used.
